changed the issue list header behavior on mobile

--- a/src/styles/animation.less
+++ b/src/styles/animation.less
@@ -63,6 +63,10 @@
 
 .modal--fade-if {
     .transition(0.2s ease-in-out all);
+
+    .no-anim & {
+        .transition(none);
+    }
 }
 
 .modal--fade-if.ng-enter {
