--- a/src/styles/modules/header.less
+++ b/src/styles/modules/header.less
@@ -3,16 +3,25 @@
    ========================================================================== */
 
 .banner {
-    height: 0;
-    left: 0;
-    position: fixed;
-    top: 0;
-    width: 100%;
-    z-index: @header-z-index;
+    height: 65px;
 
     [data-bg-mode="tag"] &,
     [data-bg-mode="intro"] & {
         display: none;
+    }
+
+    .at-medium({
+        .box-shadow(none);
+        height: 0;
+        left: 0;
+        position: fixed;
+        top: 0;
+        width: 100%;
+        z-index: @header-z-index;
+    });
+
+    .is-detail & {
+        .box-shadow(2px 2px 10px @black);
     }
 
     .is-side-panel-open & {
@@ -37,13 +46,13 @@
 
     .at-medium({
         padding: 0 30px;
-        top: 30px;
+        top: 10px;
     });
 
     .at-xlarge({
         left: 0;
         position: fixed;
-        top: 40px;
+        top: 20px;
         z-index: @header-z-index;
     });
 
@@ -61,14 +70,6 @@
 
         .at-xlarge({
             .font-size(2.2);
-        });
-    }
-
-    .is-detail & {
-        display: none;
-
-        .at-medium({
-            display: inline-block;
         });
     }
 }
@@ -96,6 +97,7 @@
 
 .banner-info--menu {
     display: block;
+    position: absolute;
 
     [data-bg-mode="tag"] &,
     [data-bg-mode="intro"] & {
@@ -142,6 +144,16 @@
     margin: 0 0 24px;
     .transition(background-color 0.3s ease-in-out);
     .transition(background 0.3s ease-in-out);
+
+    &.fixed {
+        height: 60px;
+        left: 0;
+        margin: 0;
+        position: fixed;
+        top: 0;
+        width: 100%;
+        z-index: @header-z-index - 1;
+    }
 
     .at-medium({
         height: 100px;
